# fastapi-app

./: .gitignore  .pre-commit-config.yaml  main.py  model.py  pyproject.toml
app/: database.py  main.py  settings.py
app/handlers/: __init__.py  country.py  creator.py
app/migrations/: env.py
app/migrations/versions/: a13f5efd7191_init_migrations.py
app/model/: __init__.py  company.py  country.py  user.py
app/schemas/: country.py  creator.py  pagination.py
app/services/: base.py  country_service.py
