[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.13",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "ruff>=0.12.0",
    "uvicorn>=0.34.3",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
fixable = ["ALL"]


[tool.ruff.format]
quote-style = "double"          # или 'single'

